--- a/index.html
+++ b/index.html
@@ -69,8 +69,6 @@
             border-radius: 12px;
             padding: 16px;
             color: white;
-            max-height: 320px;
-            overflow-y: auto;
         }
         .profile-header { display: flex; align-items: center; margin-bottom: 16px; }
         .profile-avatar {
@@ -119,7 +117,7 @@
 
         .edit-field { display: flex; flex-direction: column; gap: 6px; margin-bottom: 16px; }
         .edit-label { font-weight: 600; color: #333; font-size: 14px; }
-        .edit-input, .edit-textarea {
+        .edit-input {
             padding: 12px; border: 1px solid #ddd; border-radius: 8px; font-size: 15px;
         }
         .photo-preview {
@@ -151,34 +149,18 @@
             padding: 12px; border-radius: 8px; text-decoration: none; font-weight: bold;
         }
         .need-item {
-            background: #f0f0f0;
-            padding: 12px 16px;
-            border-radius: 8px;
-            margin-bottom: 8px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            background: #f0f0f0; padding: 12px; border-radius: 8px; margin-bottom: 8px;
+            display: flex; justify-content: space-between; align-items: center;
         }
         .delete-btn {
-            background: #ff4d4d;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            width: 24px;
-            height: 24px;
-            font-size: 16px;
-            line-height: 24px;
-            cursor: pointer;
-            text-align: center;
-            padding: 0;
+            background: #ff4d4d; color: white; border: none;
+            border-radius: 50%; width: 24px; height: 24px;
+            font-size: 16px; line-height: 24px; cursor: pointer;
+            text-align: center; padding: 0;
         }
         .ai-response {
-            background: #e8f5e9;
-            padding: 16px;
-            border-radius: 12px;
-            margin-top: 16px;
-            white-space: pre-line;
-            line-height: 1.5;
+            background: #e8f5e9; padding: 16px; border-radius: 12px; margin-top: 16px;
+            white-space: pre-line; line-height: 1.5;
         }
     </style>
 </head>
@@ -220,7 +202,6 @@
                     avatarBase64: null
                 }];
                 setChildren(initial);
-                // Αυτόματα επιλογή πρώτου παιδιού αν υπάρχει
                 if (initial.length > 0) {
                     setSelectedChildId(initial[0].id);
                 }
@@ -294,128 +275,4 @@
                                     <div className="empty-state">
                                         <div className="empty-state-icon">👶</div>
                                         <p>Δεν έχεις προσθέσει παιδιά ακόμα</p>
-                                        <button className="btn-primary" onClick={() => setActiveTab('add-child')} style={{marginTop: '16px'}}>
-                                            + Πρόσθεσε το πρώτο παιδί
-                                        </button>
-                                    </div>
-                                ) : (
-                                    <div className="home-profile-list">
-                                        {children.map(child => (
-                                            <div key={child.id} className={`home-profile-item ${child.id === selectedChildId ? 'selected' : ''}`} onClick={() => setSelectedChildId(child.id)}>
-                                                <div className="home-profile-avatar" style={{backgroundImage: `url(${child.avatarBase64 || ''})`}}>
-                                                    {!child.avatarBase64 && '👧'}
-                                                </div>
-                                                <div>
-                                                    <div style={{fontWeight: 'bold'}}>{child.name || 'Χωρίς όνομα'}</div>
-                                                    <div style={{fontSize: '14px'}}>{child.age || '?'} ετών • {child.gender || '?'}</div>
-                                                </div>
-                                                <button className="delete-child-btn" onClick={(e) => { e.stopPropagation(); deleteChild(child.id); }}>×</button>
-                                            </div>
-                                        ))}
-                                    </div>
-                                )}
-                                <button className="btn-primary" onClick={() => setActiveTab('add-child')} style={{marginTop: '16px'}}>
-                                    + Νέο παιδί
-                                </button>
-
-                                {upcoming.length > 0 && (
-                                    <div className="notification-section">
-                                        <div className="section-title">Άμεσες Περιστάσεις</div>
-                                        {upcoming.map(o => (
-                                            <div key={o.name} className="notification-card">
-                                                <strong>{o.icon} {o.name}</strong> – σε {o.daysUntil} μέρες
-                                            </div>
-                                        ))}
-                                    </div>
-                                )}
-                            </div>
-                        )}
-
-                        {activeTab === 'add-child' && (
-                            <div className="child-profile-wrapper">
-                                <div className="section-title">Προσθήκη Νέου Παιδιού</div>
-                                <div className="edit-form">
-                                    <div className="edit-field">
-                                        <label className="edit-label">Όνομα</label>
-                                        <input className="edit-input" placeholder="π.χ. Άρης" id="newName" />
-                                    </div>
-                                    <div className="edit-field">
-                                        <label className="edit-label">Ηλικία</label>
-                                        <input type="number" className="edit-input" placeholder="π.χ. 7" id="newAge" />
-                                    </div>
-                                    <div className="edit-field">
-                                        <label className="edit-label">Φύλο</label>
-                                        <input className="edit-input" placeholder="π.χ. Αγόρι / Κορίτσι" id="newGender" />
-                                    </div>
-                                    <div className="edit-field">
-                                        <label className="edit-label">Μέγεθος ρούχων</label>
-                                        <input className="edit-input" placeholder="π.χ. 128cm (7-8 ετών)" id="newClothing" />
-                                    </div>
-                                    <div className="edit-field">
-                                        <label className="edit-label">Μέγεθος παπουτσιών</label>
-                                        <input className="edit-input" placeholder="π.χ. 32" id="newShoe" />
-                                    </div>
-                                    <div className="edit-field">
-                                        <label className="edit-label">Αγαπημένα χρώματα (κόμμα)</label>
-                                        <input className="edit-input" placeholder="π.χ. Μπλε, Πράσινο" id="newColors" />
-                                    </div>
-                                    <div style={{display: 'flex', gap: '12px', marginTop: '24px'}}>
-                                        <button className="btn-primary" onClick={() => {
-                                            const name = document.getElementById('newName').value.trim();
-                                            if (!name) {
-                                                alert("Βάλε τουλάχιστον όνομα!");
-                                                return;
-                                            }
-                                            addNewChild({
-                                                name,
-                                                age: document.getElementById('newAge').value ? parseInt(document.getElementById('newAge').value) : undefined,
-                                                gender: document.getElementById('newGender').value.trim(),
-                                                clothingSize: document.getElementById('newClothing').value.trim(),
-                                                shoeSize: document.getElementById('newShoe').value.trim(),
-                                                favoriteColors: document.getElementById('newColors').value ? document.getElementById('newColors').value.split(',').map(c => c.trim()) : [],
-                                                avatarBase64: null
-                                            });
-                                        }}>Προσθήκη</button>
-                                        <button className="btn-secondary" onClick={() => setActiveTab('home')}>Άκυρο</button>
-                                    </div>
-                                </div>
-                            </div>
-                        )}
-
-                        {activeTab === 'profile' && (
-                            selectedChild ? (
-                                <ProfileTab selectedChild={selectedChild} onUpdate={updateChild} />
-                            ) : (
-                                <div className="empty-state">
-                                    <div className="empty-state-icon">👶</div>
-                                    <p>Επίλεξε ένα παιδί από την αρχική οθόνη για να δεις/επεξεργαστείς το προφίλ του</p>
-                                </div>
-                            )
-                        )}
-
-                        {activeTab === 'needs' && (
-                            selectedChild ? (
-                                <NeedsTab selectedChild={selectedChild} savedNeeds={savedNeeds} setSavedNeeds={setSavedNeeds} />
-                            ) : (
-                                <div className="empty-state">
-                                    <div className="empty-state-icon">🛒</div>
-                                    <p>Επίλεξε ένα παιδί από την αρχική οθόνη για να δεις/προσθέσεις τις ανάγκες του</p>
-                                </div>
-                            )
-                        )}
-
-                        {activeTab === 'ai' && <AITab selectedChild={selectedChild} />}
-
-                        {activeTab === 'deals' && <DealsTab />}
-                    </div>
-                </div>
-            );
-        }
-
-        // Οι υπόλοιπες συναρτήσεις (ProfileTab, NeedsTab, AITab, DealsTab) μένουν ίδιες με την τελευταία έκδοση που δούλευε
-        // Αν χρειάζεσαι να σου τις ξαναδώσω ολόκληρες, πες μου
-
-        ReactDOM.render(<App />, document.getElementById('root'));
-    </script>
-</body>
-</html>
+                                        <button className="btn-primary" onClick={() => setActiveTab('add-child
