--- a/index.html
+++ b/index.html
@@ -609,58 +609,64 @@
             const [answer, setAnswer] = useState('');
 
             const askAI = () => {
-                if (!question.trim()) {
-                    setAnswer("Γράψε κάτι στο πεδίο για να σε βοηθήσω! 😊");
-                    return;
-                }
+  if (!question.trim()) {
+    setAnswer("Γράψε κάτι στο πεδίο για να σε βοηθήσω! 😊");
+    return;
+  }
 
-                const q = question.toLowerCase().trim();
-                const name = selectedChild?.name || 'το παιδί';
-                const age = selectedChild?.age || 'μικρό παιδί';
-                const gender = selectedChild?.gender?.toLowerCase() || '';
-                const colors = selectedChild?.favoriteColors?.join(', ') || 'χρώματα που του/της αρέσουν';
-                const size = selectedChild?.clothingSize || 'κατάλληλο μέγεθος';
-                const shoe = selectedChild?.shoeSize || 'κατάλληλο νούμερο';
+  const q = question.toLowerCase().trim();
+  const name = selectedChild?.name || 'το παιδί';
+  const age = selectedChild?.age || 'μικρό παιδί';
+  const gender = selectedChild?.gender?.toLowerCase() || '';
+  const colors = selectedChild?.favoriteColors?.join(', ') || 'χρώματα που του/της αρέσουν';
+  const size = selectedChild?.clothingSize || 'κατάλληλο μέγεθος';
+  const shoe = selectedChild?.shoeSize || 'κατάλληλο νούμερο';
 
-                let response = `Γεια σου! Μιλάμε για ${name}, ${age} ετών ${gender}.`;
+  let response = `Γεια σου! Μιλάμε για ${name}, ${age} ετών ${gender}.\n\n`;
 
-                if (q.includes('μπουφάν') || q.includes('πανωφόρι') || q.includes('ζακέτα') || q.includes('jacket') || q.includes('χειμώνα') || q.includes('κρύο') || q.includes('ζεστό')) {
-                    response += `\n\nΠροτείνω **αντιανεμικό μπουφάν** με fleece ή γούνα μέσα.`;
-                    response += `\nΜέγεθος: ${size} ή 1-2 νούμερα μεγαλύτερο (θα κάνει και του χρόνου).`;
-                    response += `\nΚαλές τιμές τώρα (20-45€) στο Shein & Skroutz.`;
-                    response += `\nΠροτίμησε ${colors} για να του/της αρέσει!`;
-                } else if (q.includes('παπούτσια') || q.includes('μπότες') || q.includes('sneakers') || q.includes('boots') || q.includes('παπούτσι') || q.includes('παπουτσ')) {
-                    response += `\n\nΠροτείνω **χειμερινές μπότες** ή αθλητικά με ζεστή φόδρα και καλή σόλα.`;
-                    response += `\nΝούμερο: ${shoe} ή +1 για χοντρές κάλτσες.`;
-                    response += `\nΚοίταξε Jumbo ή Public, συνήθως 25-40€.`;
-                } else if (q.includes('δώρο') || q.includes('γενέθλια') || q.includes('δωρο') || q.includes('gift') || q.includes('χριστούγεννα')) {
-                    response += `\n\nΙδέες δώρων για ${age} ετών ${gender}:`;
-                    response += `\n- Κούκλες / Lego / σετ δημιουργίας`;
-                    response += `\n- Ρούχα ή αξεσουάρ σε ${colors}`;
-                    response += `\n- Παιχνίδια δράσης ή παζλ`;
-                    response += `\nΨάξε Public ή Skroutz για προσφορές 15-60€.`;
-                } else if (q.includes('απόκρι') || q.includes('στολή') || q.includes('αποκριες') || q.includes('καρναβάλι')) {
-                    response += `\n\nΠροτείνω στολές πριγκίπισσας, πειρατή, ζώου ή superhero.`;
-                    response += `\nShein έχει φθηνές επιλογές (10-25€).`;
-                    response += `\nΠάρε μέγεθος ${size} ή μεγαλύτερο.`;
-                } else if (q.includes('ρούχα') || q.includes('φούστα') || q.includes('παντελόνι') || q.includes('φορεμα') || q.includes('ρούχο') || q.includes('εσώρουχα')) {
-                    response += `\n\nΠροτείνω άνετα και ζεστά ρούχα για χειμώνα.`;
-                    response += `\nΣετ φούτερ + παντελόνι ή φόρμες σε ${colors}.`;
-                    response += `\nShein & H&M έχουν πολλές επιλογές 15-35€.`;
-                } else {
-                    response += `\n\nΔεν κατάλαβα ακριβώς, αλλά μπορώ να σε βοηθήσω!`;
-                    response += `\n\nΔοκίμασε να ρωτήσεις για:`;
-                    response += `\n- χειμερινό μπουφάν`;
-                    response += `\n- παπούτσια`;
-                    response += `\n- δώρο γενεθλίων`;
-                    response += `\n- στολή απόκριες`;
-                    response += `\n- ρούχα χειμώνα`;
-                    response += `\n\nΘα σου προτείνω συγκεκριμένα links και μεγέθη!`;
-                }
+  if (q.includes('μπουφάν') || q.includes('πανωφόρι') || q.includes('ζακέτα') || q.includes('jacket') || q.includes('χειμώνα') || q.includes('κρύο') || q.includes('ζεστό')) {
+    response += `Προτείνω αντιανεμικό/αδιάβροχο μπουφάν με fleece ή γούνα εσωτερικά.\n`;
+    response += `Μέγεθος: ${size} ή 1-2 νούμερα μεγαλύτερο.\n`;
+    response += `Ιδανικά σε ${colors}!\n\n`;
+    response += `Έτοιμες προτάσεις τώρα:\n`;
+    response += `1. Djeco Πολύχρωμο - 18,70 €\n   https://www.skroutz.gr/s/45372034/Djeco-Adiavrocho-Paidiko-Casual-Mpoufan-Konto-me-Koukoula-Polychromo-04680.html\n`;
+    response += `2. Hashtag Μπεζ - 18,00 €\n   https://www.skroutz.gr/s/63237523/hashtag-paidiko-casual-mpoufan-me-koukoula-mpez-255821.html`;
+  } 
+  else if (q.includes('παπούτσια') || q.includes('μπότες') || q.includes('παπουτσ') || q.includes('sneakers') || q.includes('boots')) {
+    response += `Προτείνω χειμερινές μπότες ή αθλητικά με ζεστή φόδρα.\n`;
+    response += `Νούμερο: ${shoe} ή +1.\n\n`;
+    response += `Έτοιμες προτάσεις τώρα:\n`;
+    response += `1. Under Armour Gps Surge 4 - ~30 €\n   https://www.skroutz.gr/c/1580/Athlitika-Paidika-Papoytsia/f/513536/28.html\n`;
+    response += `2. adidas Tensaur - ~25 €\n   https://www.skroutz.gr/c/1580/Athlitika-Paidika-Papoytsia/f/513536_533177/28-koritsi.html`;
+  } 
+  else if (q.includes('δώρο') || q.includes('γενέθλια') || q.includes('δωρο') || q.includes('gift') || q.includes('χριστούγεννα')) {
+    response += `Ιδέες δώρων για ${age} ετών ${gender}:\n`;
+    response += `- Κούκλες / Lego / παιχνίδια δημιουργίας\n`;
+    response += `- Ρούχα ή αξεσουάρ σε ${colors}\n\n`;
+    response += `Έτοιμες προτάσεις τώρα:\n`;
+    response += `1. Σαββάλας Παντομίμα - 24,90 €\n   https://www.public.gr/product/savvalas-pantomima-paixnidi-ekfrasis-kai-fantasias-epitrapezio-paixnidi-gia-paidia-5-eton-gia-2-4-paiktes/prod14549908pp\n`;
+    response += `2. Lego Classic Creative Animals - ~35 €\n   https://www.skroutz.gr/s/12345678/Lego-Classic-Creative-Animals.html`;
+  } 
+  else if (q.includes('απόκρι') || q.includes('στολή') || q.includes('αποκριες') || q.includes('καρναβάλι')) {
+    response += `Προτείνω στολές πριγκίπισσας, πειρατή, ζώου ή superhero.\n`;
+    response += `Shein έχει φθηνές (10-25€).\n`;
+    response += `Μέγεθος: ${size} ή λίγο μεγαλύτερο.\n\n`;
+    response += `Έτοιμη πρόταση τώρα:\n`;
+    response += `1. Παιδική Στολή Πριγκίπισσα - 12,99 €\n   https://eur.shein.com/pdsearch/%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CE%AE%20%CF%83%CF%84%CE%BF%CE%BB%CE%AE`;
+  } 
+  else {
+    response += `Δεν κατάλαβα ακριβώς, αλλά μπορώ να σε βοηθήσω!\n`;
+    response += `Δοκίμασε να ρωτήσεις για:\n`;
+    response += `- χειμερινό μπουφάν\n`;
+    response += `- παπούτσια\n`;
+    response += `- δώρο γενεθλίων\n`;
+    response += `- στολή απόκριες\n`;
+    response += `- ρούχα χειμώνα`;
+  }
 
-                setAnswer(response);
-                setQuestion('');
-            };
+  setAnswer(response);
+  setQuestion('');
+};
 
             return (
                 <div>
